; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Memory.c_ReAlloc.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Memory.c_ReAlloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i64, i32 }

@MEMTAG_MAGIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ReAlloc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 @IS_NULL_POINTER(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %71

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call %struct.TYPE_8__* @POINTER_TO_MEMTAG(i8* %15)
  store %struct.TYPE_8__* %16, %struct.TYPE_8__** %6, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %18 = call i32 @CheckMemTag(%struct.TYPE_8__* %17)
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %7, align 4
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* %5, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %14
  %28 = load i8*, i8** %4, align 8
  store i8* %28, i8** %3, align 8
  br label %71

29:                                               ; preds = %14
  %30 = load i32, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %56

32:                                               ; preds = %29
  %33 = load i64, i64* %5, align 8
  %34 = call i8* @MallocEx(i64 %33, i32 1)
  store i8* %34, i8** %8, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* %5, align 8
  %39 = icmp sle i64 %37, %38
  br i1 %39, label %40, label %47

40:                                               ; preds = %32
  %41 = load i8*, i8** %8, align 8
  %42 = load i8*, i8** %4, align 8
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = call i32 @Copy(i8* %41, i8* %42, i64 %45)
  br label %52

47:                                               ; preds = %32
  %48 = load i8*, i8** %8, align 8
  %49 = load i8*, i8** %4, align 8
  %50 = load i64, i64* %5, align 8
  %51 = call i32 @Copy(i8* %48, i8* %49, i64 %50)
  br label %52

52:                                               ; preds = %47, %40
  %53 = load i8*, i8** %4, align 8
  %54 = call i32 @Free(i8* %53)
  %55 = load i8*, i8** %8, align 8
  store i8* %55, i8** %3, align 8
  br label %71

56:                                               ; preds = %29
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %58 = load i64, i64* %5, align 8
  %59 = call i32 @CALC_MALLOCSIZE(i64 %58)
  %60 = call %struct.TYPE_8__* @InternalReAlloc(%struct.TYPE_8__* %57, i32 %59)
  store %struct.TYPE_8__* %60, %struct.TYPE_8__** %9, align 8
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %62 = call i32 @Zero(%struct.TYPE_8__* %61, i32 24)
  %63 = load i32, i32* @MEMTAG_MAGIC, align 4
  %64 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %65 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %64, i32 0, i32 2
  store i32 %63, i32* %65, align 8
  %66 = load i64, i64* %5, align 8
  %67 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %68 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %67, i32 0, i32 1
  store i64 %66, i64* %68, align 8
  %69 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %70 = call i8* @MEMTAG_TO_POINTER(%struct.TYPE_8__* %69)
  store i8* %70, i8** %3, align 8
  br label %71

71:                                               ; preds = %56, %52, %27, %13
  %72 = load i8*, i8** %3, align 8
  ret i8* %72
}

declare dso_local i64 @IS_NULL_POINTER(i8*) #1

declare dso_local %struct.TYPE_8__* @POINTER_TO_MEMTAG(i8*) #1

declare dso_local i32 @CheckMemTag(%struct.TYPE_8__*) #1

declare dso_local i8* @MallocEx(i64, i32) #1

declare dso_local i32 @Copy(i8*, i8*, i64) #1

declare dso_local i32 @Free(i8*) #1

declare dso_local %struct.TYPE_8__* @InternalReAlloc(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @CALC_MALLOCSIZE(i64) #1

declare dso_local i32 @Zero(%struct.TYPE_8__*, i32) #1

declare dso_local i8* @MEMTAG_TO_POINTER(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
